# WebApp

./: .env.example  .gitignore  .oxlintrc.json  AGENTS.md  Cargo.toml  README.md  package-lock.json
benches/: pricing_benchmarks.rs
docs/: 00-introduction.md  01-overview.md  02-core-concepts.md  03-traits.md  04-error-handling.md  05-option-pricing.md  08-rust-patterns.md  README.md
examples/: american_option_pricing.rs  bond_pricing.rs  option_pricing.rs
infra/db/migrations/: 002_equity_prices.sql  003_options_data.sql  (+2 more)
infra/docker/: .env.example  docker-compose.dev.yml  docker-compose.yml
libs/pricing-core/: Cargo.toml
libs/pricing-core/benches/: pricing_benchmarks.rs
libs/pricing-core/docs/: 05-option-pricing.md  06-bond-pricing.md  07-testing.md  09-exercises.md
libs/pricing-core/examples/: american_option_pricing.rs  bond_pricing.rs  option_pricing.rs
libs/pricing-core/src/: lib.rs
libs/pricing-core/src/calibration/: heston.rs  mod.rs
libs/pricing-core/src/core/: currency.rs  day_count.rs  interest_rate.rs  mod.rs  money.rs  traits.rs
libs/pricing-core/src/pricing/: barone_adesi_whaley.rs  black_scholes.rs  engine.rs  heston.rs  mod.rs
libs/pricing-core/src/pricing/monte_carlo/: core.rs
libs/pricing-core/src/risk/: greeks.rs  mod.rs
libs/pricing-core/src/utils/: mod.rs
libs/pricing-core/tests/: integration_tests.rs
services/: pyproject.toml
services/data-ingestion/: Dockerfile  pyproject.toml
services/data-ingestion/data/: cpi.parquet  yield_curve.parquet
services/data-ingestion/data_ingestion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/data-ingestion/ingestion/: cli.py  config.py  export.py  logging_config.py  scheduler.py
services/data-ingestion/ingestion/db/: models.py  session.py
services/data-ingestion/ingestion/pipelines/: cpi.py  options.py  yield_curve.py
services/data-ingestion/ingestion/sources/: __init__.py  base.py  databento.py  fred.py
services/data-ingestion/logs/: app.log.jsonl  test.json
services/data-ingestion/tests/: __init__.py  conftest.py  test_fred_integration.py  test_logging_config.py
services/pricing-api/: Cargo.toml  Dockerfile
services/pricing-api/src/: db.rs  dispatch.rs  handlers.rs  main.rs  models.rs  routes.rs
src/: lib.rs  main.rs
src/core/: currency.rs  error.rs  interest_rate.rs  money.rs  traits.rs
src/instruments/: bond.rs  mod.rs  option.rs
src/pricing/: barone_adesi_whaley.rs  binomial.rs  black_scholes.rs  engine.rs  mod.rs
src/risk/: greeks.rs
tests/: integration_tests.rs
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  OptionPricer.tsx  Visualize.tsx  index.css
(+14 files in other folders)
