[package]
name = "pricing-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for financial pricing and risk calculations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/pricing_lib"
keywords = ["finance", "pricing", "derivatives", "quantitative", "trading"]
categories = ["science", "mathematics", "finance"]
rust-version = "1.78"

[dependencies]
rust_decimal = { version = "1.35", features = ["maths"] }
rust_decimal_macros = "1.35"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = "1.8"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
serde = ["dep:serde", "rust_decimal/serde", "chrono/serde"]

[[bench]]
name = "pricing_benchmarks"
harness = false

[[example]]
name = "bond_pricing"
path = "examples/bond_pricing.rs"

[[example]]
name = "option_pricing"
path = "examples/option_pricing.rs"

[[example]]
name = "american_option_pricing"
path = "examples/american_option_pricing.rs"
