[package]
name = "pricing-api"
version = "0.1.0"
edition = "2021"

[dependencies]
pricing-core = { path = "../../libs/pricing-core", features = ["serde"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.35", features = ["serde"] }

[dev-dependencies]
tower = "0.4"
